--- a/docs/Reddit-FAQ-Responder-Proposal.tex
+++ b/docs/Reddit-FAQ-Responder-Proposal.tex
@@ -4,6 +4,7 @@
 \usepackage[pdftex]{graphicx}
 \usepackage{url}
 
+% jgreenemi: I'm conflicted on whether using or omitting these formatting changes is better for the proposal presentation.
 % \setlength{\oddsidemargin}{0.25in}
 % \setlength{\textwidth}{6.5in}
 % \setlength{\topmargin}{0in}
@@ -20,21 +21,27 @@ Greene, Joseph \\
 
 \maketitle
 
-
 \section{Problem Statement}
 
 This proposal is for creating an automated system of responding to Reddit user's Frequently Asked Questions. At present, large subreddits that see several thousand users a day will invariably encounter a large number of postings that are readily explained through either previous posts or through the subreddit's Wiki page resources. In an effort to educate the users who make these posts, often times a moderator or regular subreddit user will need to go out of their way to provide the answer to their question as a comment on such posts, thereby reducing the effectiveness of having an FAQ Wiki in the first place. Although having such a Wiki can simplify the process of answering such questions, the process still involves human effort to complete.
 
 The aim of this project is to automate this process with a Reddit bot application. Where a human normally identifies a post with a common question by reading through the post, then typing a comment in response to deliver a suitable answer, a bot can detect the nature of the post and respond with an informative comment to answer the question being asked. The bot can be trained on a subreddit's post history using a convolutional neural network (abbreviated as "CNN") on the normalized text from each post to assign a prediction score, telling of the likelihood that the poster is asking a common question. The bot will leverage the Reddit API for reading text posts from a specific subreddit, as well as making comments to posts as appropriate.
 
-The project is not necessarily created out of a dire need or previous request from the leadership of any subreddit for solving this problem. Rather, this project seeks to create an application that provides direct benefit to the users of a subreddit - be they the askers of questions or those who would otherwise be answering them - while providing its builders an opportunity to learn how an application can leverage the benefits of machine learning.
+% jgreenemi: I think this line is unnecessary.
+%The project is not necessarily created out of a dire need or previous request from the leadership of any subreddit for solving this problem. Rather, this project seeks to create an application that provides direct benefit to the users of a subreddit - be they the askers of questions or those who would otherwise be answering them - while providing its builders an opportunity to learn how an application can leverage the benefits of machine learning.
 
 \section{Measures of Success}
 
 \begin{itemize}
-\item The number of posts that the bot correctly identifies as FAQs versus those posts that the bot incorrectly marks as such. The goal is a 75\% accuracy in identifying posts correctly.
-\item The number of responses that the bot submits for the FAQ posts that are considered a valuable response, measured by the upvote
+\item The number of posts that the bot correctly identifies as FAQs versus those posts that the bot incorrectly marks as such. The goal is a 70\% accuracy in identifying posts correctly.
+\item The number of responses that the bot submits for the FAQ posts that are considered a valuable response, measured by the upvote score on the comment. The goal is an upvote score of at least 1 for 70\% of the bot's responses.
 \end{itemize}
+
+\section{Risks and Failure Cases}
+
+There is a risk that the Reddit bot logic could be improperly implemented where posts that get responses may get picked up again in later checks by the bot, and receive multiple responses when this is not necessary. This will be mitigated by having the bot check for posts according to one of two approaches: 1) check only posts that were submitted in the last 10 minutes, or 2) maintain a database of posts that have received responses, such that any post that is already present in the database will not receive further responses. If neither check is implemented, and the bot only checks for whether or not it already has a comment on it, this has the potential to introduce a looping behaviour.\footnote{If a subreddit moderator chose to delete the bot's response for some reason, the bot would not know about this and would comment once more.}
+
+There is also the risk that an improperly trained implementation of the Reddit bot's algorithm could produce unnecessary responses on posts that did not need them, or that posts asking FAQs would be missed entirely. To address this risk, the bot will only be tested against subreddits that have sufficiently large post histories of FAQs to train and evaluate with. Those subreddits with too few samples to provide of both kinds of posts will not be able to take advantage of the bot as the algorithm will be unable to generalize well enough to accurately predict the nature of the posts. The exact threshold of how many samples will be needed of each kind of post remains to be found as development is not yet underway.
 
 \section{In Scope}
 
@@ -57,20 +64,10 @@ It is assumed that the subreddits for which the bot will be used will have a suf
 
 It is also assumed that every subreddit to use the bot has sufficient Wiki content to answer the poster's question. Otherwise the bot will not provide value to the users of the subreddit.
 
-\section{Use Cases}
 
-.
-
-\section{Risks and Failure Cases}
-
-.
-
-\section{Open Issues}
-
-.
-
-\section{Stakeholders}
-
-.
+% jgreenemi: These are the only sections I feel are necessary for the proposal's aims. Do you think anything's missing? Is anything unnecessary?
+\begin{center}
+\#\#\#
+\end{center}
 
 \end{document}
